--- a/gb/nf3046_3.md
+++ b/gb/nf3046_3.md
@@ -24,6 +24,7 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/10/2/n11561511.md#1" target="_blank">马国民众声援三退大潮 谴责中共在港暴行</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/10/2/n11561511.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/01-20190929-Mal-TD-IMG_2141-R-150x120.jpg" align ="left"></a>在刚过的周末（9月29日）下午，马来西亚退党服务中心义工们来到了首都吉隆坡市中心，在人山人海的武吉免登区（Bukit Bintang）举行集会，和民众一起声援3亿4千2百万退出共产党、共青团和少先队的“三退”勇士们；同时抗议中共黑手暴力攻击香港法轮功学员，制造流血事件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月02日 10:11 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/10/1/n11559592.md#1" target="_blank">中共篡政70年 凌晓辉：从反送中看到希望</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/10/1/n11559592.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/01/1201150518552519-150x120.jpg" align ="left"></a>为了“国庆70周年”，本应与国同庆的人民却被控制，除了商场不能卖菜刀外，小饭馆被强制停业，医院不准收留病人，长安街附近的居民不能用燃气，甚至，上公厕都要实名登记……有评论表示，如今的中国不是中国人民的，所以这不是国庆，而是国殇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月01日 6:16 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/9/30/n11558127.md#1" target="_blank">中共随时戒严 泛民及民阵4人发起十一大游行</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/9/30/n11558127.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/WhatsApp_Image_2019-10-01_at_12417_AM@1200x1200-150x120.jpeg" align ="left"></a>9月30日下午，三名香港民主派前议员李卓人、何俊仁、梁国雄以及民阵副召集人陈皓桓宣布，四人将以个人身份，承接民阵原来游行路线，于10月1日下午1时由铜锣湾东角道集合，游行到中环遮打道行人专用区。他们表示，此为公民抗命举动，清楚法律后果。他们四人随时都有被捕的危机。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月01日 3:11 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/10/16/n11591181.md#1" target="_blank">每日三退声明精选（2019/10/15）</a><br></h3>本人因年少无知，生长环境所影响，依次加入了少先队和共青团。现了解中共所领导的集权政府奴役中国人民长达七十年之久，为巩固政权无所不用，遂申明退队退团，不与恶党共谋，永不反悔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月16日 10:21 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/10/15/n11588801.md#1" target="_blank">每日三退声明精选（2019/10/14）</a><br></h3>本人出生并成长在中国大陆，接受的中共多年洗脑教育，因此不经意间成为愚民的一份子。多年之后，才有机会接触到了一部分尘封的历史真相，逐渐认清了中共这个反人类政党的邪恶本质，极权、谎言、暴力、血腥是它的代名词，它的存在，全面抹杀了中华民族的精英人才，荼毒了中华民族的优秀文化，是对人类文明和自由的最大威胁。马列主义肆虐中华大地，绑架了十四亿人民，幽厉兴则民好暴，我中.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月15日 10:54 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/10/14/n11586464.md#1" target="_blank">每日三退声明精选（2019/10/13）</a><br></h3>我们很早就知道中共不是什么好东西，但是受国内的洗脑教育，一直觉得国内的乱像是受2000年封建社会历史的影响，四九年中共建政以后的历史一直都是空白，中共对这70年历史讳莫如深，只讲什么丰功伟绩，大跃进、文革、六四从来没有讲。大部分年轻人甚至不知道六四、法轮功是怎么回事。直到一个炼法轮功的朋友和我们聊天，详细介绍了中共四九年以后的历史，才知道我们生活在怎样一个世.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月14日 11:48 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/10/13/n11584815.md#1" target="_blank">每日三退声明精选（2019/10/12）</a><br></h3>现在终于看到中共可怕的地方在于，一日不除这个恶魔，全部华人都得遭殃。看看现在全世界对华人的印象和限制，很多时候都是因为中共。还有很多海外的大陆华人被中共的毒素中毒颇深，连马化腾、马云等富人的命运都不足以唤醒他们。我觉得很可怕，真的很邪恶。为了给自己一个安全的未来，本人在此在精神上和身份上退出中共党团队，脱离中共的辖制，抛弃邪恶，走向自由！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月13日 11:03 AM							</td></tr>
@@ -44,6 +45,5 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/9/20/n11534046.md#1" target="_blank">每日三退声明精选（2019/09/19）</a><br></h3>作为一名大学生，看到中共首都各高校都为赤匪统治中国70周年绞尽脑汁，大搞面子工程，为六四三十周年的今日深感痛心！今日的大学对不起当初流血的师生！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 11:49 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/9/19/n11531343.md#1" target="_blank">每日三退声明精选（2019/09/18）</a><br></h3>作为华为员工，我糊里糊涂加入了中国共产党。我看到华为专门监控老百姓，太坏了。现声明退出邪恶的中国共产党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 11:21 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/9/18/n11528820.md#1" target="_blank">每日三退声明精选（2019/09/17）</a><br></h3>作为在中国长大的小孩，我小时候也糊里糊涂加入了少先队和共青团。甚至我还曾经对共匪歪曲事实的过往“光辉历史”宣传深信不疑，真心认为过去的的所谓“革命先烈”是好的，只是掌权后人心变坏了。我越长大越认识到这是一个黑白颠倒的社会，自由和公义在这里被践踏，奴役和奸诈却是无处不在。但我不知道为什么会这样。所有人都告诉我，这很正常，哪里都一样，你要长大要适应社会，而不是让.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月18日 11:26 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/9/16/n11524267.md#1" target="_blank">每日三退声明精选（2019/09/15）</a><br></h3>我是一名新疆人，了解中共利用集中营等方式对新疆人的严重迫害情况。通过了解真相，我也知道了中共对法轮功的残酷迫害，其中活摘器官就是其残忍的迫害手段之一。一直以来中共都在利用着各种政治运动迫害中国人，在思想意识上进行强化洗脑教育，摧残和毁灭他们的灵魂和肉体，手段极为残忍、邪恶，纵观这段历史，这个邪党对中国人所犯下的滔天罪恶，真是罄竹难书。由此可见中共不仅仅是一个.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 11:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_3.md#1<br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_3.htm">http://www.epochtimes.com/gb/nf3046_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
